--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "fetch",
     "timeout"
   ],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/victorstein/fetch-timer"
+  },
   "author": "Alfonso Gomez",
   "license": "ISC",
   "dependencies": {
